# bingo

./: Bingo.hs  Game.hs  Lottery.hs  Main.hs  README.md  Server.hs  ServerState.hs  bingo.cabal  readme.md
app/: Bingo.hs  Console.hs
static/: admin.css  admin.html  admin.js  common.js  participant.css  participant.html  participant.js  viewer.css  viewer.html  viewer.js
