name:                bingo
version:             0.1.0.0
synopsis:            Auto Bingo System 
description:         Please see README.md
homepage:            https://github.com/mitsuji/bingo
license:             BSD3
license-file:        LICENSE
author:              Takamasa Mitsuji
maintainer:          tkms@mitsuji.org
--copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

--library
--  hs-source-dirs:      src
--  exposed-modules:     Lib
--  build-depends:       base >= 4.7 && < 5
--  default-language:    Haskell2010

executable bingo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , unix
                     , uuid
                     , random
                     , mtl
                     , containers
                     , stm
                     , async
                     , text
                     , bytestring
                     , aeson
                     , file-embed
                     , http-types
                     , websockets
                     , warp
                     , wai
                     , wai-app-static
                     , wai-websockets
                     , wai-extra
  default-language:    Haskell2010

--test-suite bingo-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , bingo
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mitsuji/bingo.git
